styled forms and fixed leftBAr z-index issue

--- a/lambda-notes/src/App.css
+++ b/lambda-notes/src/App.css
@@ -51,3 +51,47 @@ body {
   height: 42px;
   font-weight: bold;
 }
+.formHolder{
+margin-left: 270px;
+display: flex;
+flex-direction: column;
+}
+.form{
+  
+  display: flex;
+  flex-direction: column;
+  }
+
+.titleInput{
+  font-size: 20px;
+  margin-left: 23%;
+  width: 30%;
+  margin-bottom: 20px;
+  border: 1.5px solid gray;
+}
+.textInput{
+  font-size: 20px;
+  margin-left: 23%;
+  width: 60%;
+  height: 400px;
+  border: 1.5px solid gray;
+}
+.saveBtn{
+  background-color: #24b8bd;
+  border: 1px solid #24b8bd;
+  font-size: 18px;
+  font-weight: bold;
+  color: black;
+  text-decoration-line: none;
+  margin-top: 10px;
+  width: 150px;
+  padding: 15px;
+  color: white;
+  text-align: center;
+  cursor: pointer;
+}
+.noteContent{
+  display: flex;
+  flex-flow: column;
+  align-items: flex-start;
+}
